--- a/style.css
+++ b/style.css
@@ -275,7 +275,8 @@ section{
 }
 
 
-@media screen and (max-width:768px){
+
+@media screen and (max-width:1024px){
     header {
         flex-direction: column;
         padding:10px 0px;
@@ -291,14 +292,6 @@ section{
     }
     nav{
         margin:10px 0px;
-    }
-
-    .nav-links{
-        display: flex;
-    }
-    .nav-link{
-        width:100%;
-        flex-direction: column;
     }
 
 
@@ -327,86 +320,21 @@ section{
     #food-lists {
         display: flex;
         flex-direction: column;
-        height: 80vh;
-        margin-bottom: 50px;
-    } 
-
-    .food-list {
-
-        margin:10px 0px;
-        display: flex;
-        padding:7px 5px;
-        border-radius: 2px;
-    }
-
-    .map-container{
-        margin-top: 50px;
-    }
-    
-    #mapid{ 
-        height: 400px; 
-        width: 400px;
-    }
-
-    .event-content-video iframe {
-        height:250px;
-        width: 400px;
-    }
-}
-@media screen and (max-width:1100px){
-    header {
-        flex-direction: column;
-        padding:10px 0px;
         height: auto;
-    }
-    .logo-container img{
-        height:65px;
-    }
-    .logo{
-        font-size: 18px;
-        margin-left: 5px;
-        line-height: 65px;
-    }
-    nav{
-        margin:10px 0px;
-    }
-
-
-    .main-title{
-        font-size: 5px;
-        top:25%
-    }
-
-    
-    .subtitle-container img {
-        height:75px;
-    }
-    
-    .subtitle{
-        font-size: 33px;
-        letter-spacing: 4px;
-        line-height: 75px;
-        width:75px;
-    }
-
-
-    .food-content{
-        flex-direction: column;
-    }
-
-    #food-lists {
-        display: flex;
-        flex-direction: column;
-        height: 80vh;
         margin-bottom: 50px;
+        justify-content:flex-start;
     } 
 
     .food-list {
-
         margin:10px 0px;
         display: flex;
+        flex-direction: column;
         padding:7px 5px;
         border-radius: 2px;
+    }
+
+    .food-list-img{
+        margin:auto;
     }
 
     .map-container{
