--- a/style.css
+++ b/style.css
@@ -349,6 +349,9 @@ section{
         width:75px;
     }
 
+    .food-video{
+        height:100%;
+    }
 
     .food-content{
         flex-direction: column;
